TrendGroup CRUD endpoints created & tested
