# backend/api/routers/__init__.py
@@ -7,3 +7,4 @@ from .link import router as link_router
 from .node import router as node_router
 from .template import router as template_router
 from .unit import router as unit_router
+from .trend_group import router as trend_groups_router
